Refactor product management to use `ProductRequestDto` and `ProductResponseDto`
Replaced `ProductDto` with separate `ProductRequestDto` and `ProductResponseDto` to improve clarity and alignment with API request-response patterns. Updated services, repositories, test factories, and controllers accordingly. Enhanced test cases to validate response integrity.